lib/bait/tests/inout_error/stmt_after_script_mode.out
lib/bait/tests/inout_error/stmt_after_script_mode.in.bt:5:6 error: invalid expression: kind = key_struct
