lib/bait/tests/inout_error/stmt_after_script_mode.in.bt
struct Foo{}

f := Foo{}

struct Bar{}
